--- a/app/views/oscillators/index.html.erb
+++ b/app/views/oscillators/index.html.erb
@@ -1,15 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Oscillators</h1>
 
 <table>
   <thead>
-    <tr>
-      <th>Frequency</th>
-      <th>Wave</th>
-      <th>Detune</th>
-      <th colspan="3"></th>
-    </tr>
+  
   </thead>
 
   <tbody>
@@ -28,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Oscillator', new_oscillator_path %>
+<%#= link_to 'New Oscillator', new_oscillator_path %>
