--- a/app/assets/stylesheets/oscillators.scss
+++ b/app/assets/stylesheets/oscillators.scss
@@ -8,3 +8,26 @@
   align-items: flex-end;
   height: 300px;
 }
+
+.sectionLoops {
+  width: 1000px;
+  padding: 20px 40px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  .itemLoop {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    .headerLoop {
+      line-height: 20px;
+      text-transform: uppercase;
+      margin-right: 15px;
+      font-weight: 200;
+    }
+  }
+}
