--- a/app/assets/stylesheets/Effect.scss
+++ b/app/assets/stylesheets/Effect.scss
@@ -1,18 +1,32 @@
-.Effect {
-  width: 1000px;
-  padding: 20px 40px;
-  margin: 20px 0 20px 0;
-  border-radius: 5px;
-  background-color: #f5f5f5;
+.panelEffects {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 55px;
+  //display: flex;
+  //flex-direction: row;
+  //flex-wrap: wrap;
 
-  .headerEffect {
-    font-weight: 200;
-  }
+  //s:nth-child(3n + 2) {
+  //s  margin-left: 55px;
+  //s  margin-right: 55px; /* Цвет фона */
+  //s}
 
-  .paramEffect {
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 200;
-    margin-top: 15px;
+  .Effect {
+    width: 300px;
+    background-color: black;
+
+    //:last-child {
+    //  margin-top: 0px;
+    //}
+
+    .paramEffect {
+      margin-bottom: 30px;
+      .paramName {
+        color: white;
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: 200;
+      }
+    }
   }
 }
