--- a/app/assets/stylesheets/PlaySwitch.scss
+++ b/app/assets/stylesheets/PlaySwitch.scss
@@ -4,14 +4,17 @@
       width: 0;
       height: 0;
       border-style: solid;
-      border-width: 10px 0 10px 17.3px;
-      border-color: transparent transparent transparent #e0e0e0;
+      //border-width: 10px 0 10px 17.3px;
+      border-width: 6px 0 6px 11.3px;
+      border-color: transparent transparent transparent black;
     }
 
     &.switchOff {
-      width: 20px;
-      height: 20px;
-      background: #e0e0e0;
+      //width: 20px;
+      //height: 20px;
+      width: 12px;
+      height: 12px;
+      background: black;
     }
   }
 }
