--- a/app/assets/stylesheets/Slider.scss
+++ b/app/assets/stylesheets/Slider.scss
@@ -1,19 +1,37 @@
 .Slider {
   position: relative;
   width: 100%;
-  height: 20px;
-  //background: #1b1b1b;
-  background: #fcfcfc;
-  //border: 1px solid #e0e0e0;
-  border-radius: 20px;
-  margin: 10px 0 10px 0;
+  height: 10px;
+  background: #242424;
+  border-radius: 5px;
+  margin-top: 15px;
+  //border: 1px solid #ff7020;
+  //border: 1px dotted white;
+
+  #ocean {
+    background-color: #2bc5a0;
+  }
+
+  #pink {
+    background-color: #ff49d7;
+  }
+
+  #lilac {
+    background-color: #b38fff;
+  }
+
+  #acid {
+    background-color: #7cff5b;
+  }
 
   .thumb {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    background: #76ff03;
-    transition: all 0.1s ease;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    //transition: all 0.1s ease;
+    //-webkit-transform-origin: center;
+    //transform-origin: center;
+    transform-origin: -10px;
   }
 }
