--- a/app/assets/stylesheets/ToggleSwitch.scss
+++ b/app/assets/stylesheets/ToggleSwitch.scss
@@ -1,32 +1,51 @@
 .ToggleSwitch {
   display: inline-block;
-  width: 150px;
+  //width: 150px;
+  width: 300px;
   height: 30px;
-  margin: 10px;
-  background: #e0e0e0;
-  //border: 1px solid black;
+  background-color: #242424;
   line-height: 30px;
   text-align: center;
   text-transform: uppercase;
   border-radius: 30px;
   font-weight: 200;
-  color: black;
+  color: white;
 
-  &.sine {
-    color: red;
-  }
-  &.square {
-    color: green;
-  }
-  &.sawtooth {
-    color: blue;
-  }
-  &.triangle {
-    color: pink;
-  }
+  //&.sine {
+  //  color: red;
+  //}
+  //&.square {
+  //  color: green;
+  //}
+  //&.sawtooth {
+  //  color: blue;
+  //}
+  //&.triangle {
+  //  color: pink;
+  //}
 
   &.on {
-    background: #76ff03;
     color: black;
+    background-color: #b38fff;
+
+    #orange {
+      background-color: #ff7020;
+    }
+
+    #pink {
+      background-color: #ff49d7;
+    }
+
+    #lilac {
+      background-color: #b38fff;
+    }
+
+    #acid {
+      background-color: #7cff5b;
+    }
+
+    #blue {
+      background-color: #a8cbff;
+    }
   }
 }
