--- a/app/assets/stylesheets/oscillators.scss
+++ b/app/assets/stylesheets/oscillators.scss
@@ -10,24 +10,49 @@
 }
 
 .sectionLoops {
-  width: 1000px;
-  padding: 20px 40px;
-  background-color: #f5f5f5;
-  border-radius: 5px;
+  width: 1090px;
+  padding-bottom: 40px;
+  //border-radius: 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
   .itemLoop {
+    width: 96px;
+    height: 24px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    border-radius: 24px;
+    margin-right: 16px;
 
     .headerLoop {
-      line-height: 20px;
-      text-transform: uppercase;
-      margin-right: 15px;
-      font-weight: 200;
+      text-transform: lowercase;
+      line-height: 24px;
+      margin-right: 10px;
+      font-weight: 400;
     }
+
+    .ToggleLoop {
+      width: 150px;
+      height: 30px;
+      background-color: #f2f2f2;
+      line-height: 30px;
+      text-align: center;
+      text-transform: uppercase;
+      border-radius: 30px;
+      font-weight: 200;
+      color: black;
+
+      &.on {
+        color: black;
+        background-color: #2bc5a0;
+      }
+    }
+  }
+
+  :last-child {
+    margin-right: 0px;
   }
 }
