some names changed, css updated

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap');
 
 body {
+  width: 1090px;
   background-color: black;
-  //color: #e0e0e0;
   color: white;
-  margin: 40px 95px 40px 95px;
+  margin: 40px auto;
   //font-family: 'IBM Plex Mono', helvetica, sans-serif;
   font-family: 'helvetica neue', helvetica, sans-serif;
   letter-spacing: 0.5pt;
